# true_vote_app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  containers.py  main.py
app/app_layer/interfaces/repositories/: room.py  vote.py
app/app_layer/interfaces/services/auth/: service.py
app/app_layer/interfaces/unit_of_work/: uow.py
app/app_layer/services/votes/create_vote/: service.py
app/dependencies/: dependencies.py
app/domain/rooms/: dto.py  entities.py
app/domain/votes/: dto.py  entities.py  enums.py  exceptions.py
app/infra/db/: connection.py  initial_data.py  mixins.py  models.py  utils.py
app/infra/repositories/room/: alchemy.py
app/infra/repositories/vote/: alchemy.py
app/infra/unit_of_work/: uow.py
app/solana_programs/blockchain_services/: Anchor.toml
app/solana_programs/blockchain_services/tests/: blockchain_services.ts
src/: alembic.ini  manage.py  setup.cfg
src/alembic/: env.py
src/app/: config.py  containers.py  main.py
src/app/api/rest/: controllers.py
src/app/app_layer/: metrics.py
src/app/domain/rooms/: dto.py  exceptions.py
src/app/domain/votes/: dto.py  enums.py  exceptions.py
src/app/infra/: cache.py
src/app/infra/db/: connection.py  initial_data.py  mixins.py  models.py  utils.py
src/app/infra/http/: coindesk_client.py  initilizer.py
src/app/infra/kafka/: producer.py
src/app/infra/unit_of_work/: uow.py
src/tests/environment/: conftests.py
(+38 files in other folders)
